# EspSmartWatch

./: .gitignore  README.md  docker-compose.yml
project/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
project/components/TFT_eSPI/: TFT_eSPI.h
project/components/arduino-esp32/: .gitignore
project/main/: CMakeLists.txt  buttons.cpp  buttons.h  buttonsInterrupt.cpp  smart-watch.cpp
project/main/gpio_inputs/: CMakeLists.txt  button.cpp  button.h  rotary_encoder.cpp  rotary_encoder.h
project/main/watch_gui/: CMakeLists.txt  menu_view.cpp  menu_view.h  option.cpp  option.h  view.cpp  view.h  watch_gui.cpp  watch_gui.h
